Admin dogs = DTO